Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,544 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8">
-    <title> reidelrb/reidelrb.github.io </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1,maximum-scale=1">
-    <script>
-const asyload = (function() {
-  try {
-
-    let modules = {}
-    asyload.version = '1.1.0'
-    //const cdn = 'https://esm.sh/';
-    //const cdn = 'https://cdn.jsdelivr.net/npm/';
-    //const cdn = 'https://unpkg.com/';
-    const cdn = 'https://esm.run/';
-    const table = (d,m=15,M=15)=>d.map((r,k)=>(k == 1 ? '-'.repeat(d[0].reduce((a,_,i)=>a + Math.max(m, Math.min(M, Math.max(...d.map(r=>String(r[i]).trim().length)))) + 2, 0)) + '\n' : '') + r.map((c,i)=>(c = String(c).trim(),c.length > (w = Math.max(m, Math.min(M, Math.max(...d.map(r=>String(r[i]).trim().length))))) ? c.slice(0, w - 2) + '..' : c).padEnd(w)).join('  ')).join('\n');
-
-    (new MutationObserver(function(mutationsList, observer) {
-      if (document.body) {
-        window._hasBody = true
-    
-        if (!document.querySelector('meta[name="viewport"]')) {
-          const viewport = document.createElement('meta')
-          viewport.name = "viewport";
-          viewport.content = "width=device-width, initial-scale=1,minimum-scale=1,maximum-scale=1";
-          document.head.append(viewport)
-          console.warn('Añada un meta-viewport a su proyecto')
-        }
-        observer.disconnect()
-      }
-    })).observe(document.documentElement, {
-      childList: true,
-      subtree: true
-    });
-
-    try {
-      urlObj = (new URL(document.currentScript.src)).searchParams;
-      window._developer = urlObj.get('dev') == 'true'
-    } catch (e) {
-      console.log(e)
-    }
-
-    if (window._developer) {
-      /*Consola dinamica*/
-      (()=>{
-        const css = document.createElement('style');
-        css.innerHTML = `cns{position:fixed;width:0;height:0;bottom:1em;right:1em;display:flex;flex-direction:column;align-items:center;justify-content:center;color:#fff;font-family:monospace;font-size:19px;font-weight:100;z-index:1000;transition:all .3s ease-in-out;overflow:hidden;box-sizing:border-box}cns:after{content:"🚀" counter(total);background:#292d38;box-shadow:0 0 5px #000;position:fixed;bottom:35px;font-size:19px;padding:5px;border-radius:5px;right:30px}cns.o{width:450px;height:calc(100% - 3em);box-shadow:0 0 10px rgba(0,0,0,.7);background:#023852;padding:10px 10px 70px;border-radius:0;animation:open .3s ease-in-out;align-items:flex-start;justify-content:flex-start;overflow-x:hidden;overflow-y:scroll;display:flex}@media(max-width:500px){cns.o{font-size:15px;width:100%;height:100%;bottom:0;right:0}}cns a{color:#07d;text-decoration:none;font-weight:900}cns.o:after{content:"⚠️" counter(warn) " ⛔" counter(error) " 📄" counter(log) " ℹ️" counter(info)}@keyframes open{from{opacity:0}to{opacity:1}}cns p{position:absolute;left:100%}cns.o p{hyphens:auto;line-height:1.5;overflow-wrap:anywhere;text-overflow:ellipsis;user-select:none;display:block;position:relative;left:0;padding:20px 10px;margin:0;color:#fff;font-family:monospace;width:100%;margin-bottom:5px}cns j{font-size:.7em;color:#fff;background:#ddd3;display:inline-block;padding:.1em .3em;border-radius:.2em;margin:5px 0}cns p.warn{color:#ffeb3b;background-color:rgba(255,235,59,.03);counter-increment:warn total}cns p.error{counter-increment:error total;background-color:rgba(244,67,54,.03);color:#f44336}cns p.log{counter-increment:total log;color:#fcfcfc;border-bottom:1px solid #444}cns p.info{counter-increment:info total;color:#4caf50;background:#0001}`;
-        document.head.append(css);
-        const consoleOriginal = {};
-        ['infod', 'log', 'error', 'warn'].forEach(t=>{
-          consoleOriginal[t] = console[t]
-          console[t] = (...e)=>{
-            if (window._hasBody) {
-              const o = e.map(t=>{
-                if (typeof t === 'object' && t !== null) {
-                  try {
-                    return String(t);
-                  } catch {
-                    return t;
-                  }
-                }
-                return String(t);
-              }).join(' ');
-              let hr;
-              try {
-                hr = (new Error()).stack.split('\n').at(-1).match(/([a-zA-Z]+:\/\/[^\s]+):(\d+):\d+/).slice(1).reduce((acc,val,i)=>i === 0 ? acc + (val.split('/').at(-1).split('?')[0]) : acc + ' @line:' + val, '');
-              } catch {
-                hr = 'from@in'
-              }
-              const pre = document.createElement('p');
-              pre.innerHTML = `<j>${hr}</j><br>${
-                  o.replace(/</g, '&lt;')
-                  .replace(/>/g, '&gt;')
-                  .replace(/(https?:\/\/[^\s,\("'\)\}\]]+)/g, '<a href="$1">$1</a>')
-                  .replace(/\n\*\s([^\n]+)/gm, '\n<b>● $1</b>')
-                  .replace(/\[([^\]]+)\]/gm, '<b>[$1]</b>')
-                  .replaceAll('\n', '<br>')
-                  .replace(/\s/g, '&nbsp;')
-                  .replace(/(\w)&nbsp;/g, '$1 ')
-                  .replace(/<a&nbsp;/g, '<a ')
-              }`;
-              pre.className = t;
-              let c = document.querySelector('cns');
-              if (!c) {
-                c = document.createElement('cns');
-                c.onclick = ()=>c.classList.toggle('o');
-                c.oncontextmenu = ()=> c.remove();
-                document.body.append(c)
-              }
-              if (t === 'error')
-                c.classList.add('o');
-              c.prepend(pre)
-              c.querySelectorAll('a').forEach(a=>a.onclick=function(){event.stopPropagation()})
-            } else {
-              consoleOriginal[t](...e)
-            }
-          }
-        })
-      })();
-      /*Consola dinamica*/
-
-      if (urlObj.get('network') == 'true') {
-        /*Carga de datos informes detallados*/
-        (() => {
-          const logResource = (resource, type) => {
-            if (!window._hasBody) return;
-            console.warn(
-              `Recurso ${type}\nNombre: ${resource.name}\nTipo: ${resource.initiatorType}\nTamaños:\n * Transferido: ${(resource.transferSize / 1000).toFixed(2)} kb\n * Decodificado: ${(resource.decodedBodySize / 1000).toFixed(2)} kb\n * Comprimido: ${(resource.encodedBodySize / 1000).toFixed(2)} kb\nTiempo: ${(resource.duration / 1000).toFixed(3)} s`
-            );
-          };
-
-          performance.getEntriesByType("resource").forEach(resource => logResource(resource, "estándar"));
-
-          new PerformanceObserver(list => {
-            list.getEntries().forEach(entry => logResource(entry, "dinámico"));
-          }).observe({ type: "resource", buffered: true });
-        })();
-        /*Carga de datos informes detallados*/
-      }
-
-      console.log('uso en desarrollo de asyload')
-    } else {
-      console.log('Uso en produccion de asyload')
-    }
-
-    const createNetworkOverlay = ()=>{
-      const e = document.createElement("div");
-      Object.assign(e.style, {
-        position: "fixed",
-        top: "0",
-        left: "0",
-        width: "100%",
-        height: "100%",
-        backgroundColor: "rgba(0, 0, 0, .5)",
-        color: "#fff",
-        display: "flex",
-        fontSize: "26px",
-        fontWeight: "900",
-        justifyContent: "center",
-        alignItems: "center",
-        zIndex: "9999999",
-      })
-      e.innerText = "Conectando..."
-      if (window._hasBody) {
-        document.body.append(e)
-      }
-      return e
-    }
-
-    const monitorRequest = (startTime,overlay,logs,isError=false)=>{
-      const duration = Date.now() - startTime;
-      overlay.remove()
-      if (window._developer) {
-        const message = `${logs}\n${isError ? "Error" : "Completado"} a los: ${duration}ms`;
-        isError ? console.error(message) : console.log(message);
-      }
-    }
-
-    const originalFetch = window.fetch;
-    window.fetch = function(...args) {
-      const startTime = Date.now();
-      const overlay = createNetworkOverlay();
-      let logs = "Fetch interceptado";
-
-      return originalFetch.apply(this, args).then((response)=>{
-        logs += `\n${response.url}`;
-        monitorRequest(startTime, overlay, logs);
-        return response;
-      }).catch((error)=>{
-        logs += `\n${args}`;
-        monitorRequest(startTime, overlay, logs, true);
-        throw error;
-      })
-    }
-    const originalXHROpen = XMLHttpRequest.prototype.open, originalXHRSend = XMLHttpRequest.prototype.send;
-    XMLHttpRequest.prototype.open = function(method, url) {
-      this._startTime = Date.now();
-      this._overlay = createNetworkOverlay();
-      this._logs = `XHR iniciado Method: ${method}`;
-      originalXHROpen.apply(this, arguments)
-    }
-    
-    XMLHttpRequest.prototype.send = function(data) {
-      const xhr = this;
-      xhr.addEventListener("load", function() {
-        xhr._logs += `\n${xhr.responseURL}`;
-        monitorRequest(xhr._startTime, xhr._overlay, xhr._logs)
-      });
-      xhr.addEventListener("error", function() {
-        xhr._logs += `\n${xhr.responseURL}`;
-        monitorRequest(xhr._startTime, xhr._overlay, xhr._logs, true);
-      });
-      originalXHRSend.apply(this, arguments)
-    }
-
-    /* funciones de asyload */
-    asyload.scan = function(f) {
-      const tabs = [['* METHODS', 'TYPE']]
-      if (typeof f == 'object') {
-        Object.keys(f).sort().map(o=>tabs.push([o, typeof f[o]]))
-        console.log('* Objeto escaneado.\n' + table(tabs))
-      } else {
-        console.warn(`* El scan es para objetos!\n\n`, typeof f == 'function' ? String(f) : '')
-      }
-    }
-
-    asyload.require = function(req) {
-      const fl = modules[req]
-      if (fl && fl.modulo) {
-        return fl.modulo
-      } else {
-        throw new Error('No se ha instalado ' + req)
-      }
-    }
-
-    asyload.render = function(e, t) {
-      const n = e;
-      function r(e) {
-        return e.replace(/\{\{(\w+)\}\}/g, (e,r)=>t[r] || e).replace(/<!--(\w+)-->/g, (e,r)=>t[r] || "");
-      }
-      function o(e) {
-        if (3 === e.nodeType)
-          e.textContent = r(e.textContent);
-        else if (1 === e.nodeType) {
-          const n = e.getAttribute("data-render");
-          if (n) {
-            const o = n.replace(/\{\{(\w+)\}\}/, "$1");
-            t[o] && (e.textContent = t[o]);
-          } else {
-            for (const n of e.attributes)
-              (/\{\{(\w+)\}\}/.test(n.value) || /<!--(\w+)-->/.test(n.value)) && (n.value = r(n.value));
-            for (const t of e.childNodes)
-              o(t);
-          }
-        } else if (8 === e.nodeType) {
-          const n = e.nodeValue.match(/^\s*(\w+)\s*$/);
-          n && t[n[1]] && e.parentNode.replaceChild(document.createTextNode(t[n[1]]), e);
-        }
-      }
-      o(n);
-      e.parentNode.replaceChild(n, e);
-      return n;
-    }
-
-    async function asyload(...params) {
-      let inLoad = []
-      let loadOk = 0
-
-      const promises = params.map(async(param)=>{
-        if (param && typeof param == 'string') {
-          if (true) {
-            const [pkg,result] = param.trim().split(' ')
-            const npm = pkg.trim()
-            const urlNpm = cdn + npm
-            const [name,vs] = npm.split('@')
-
-            loadOk++
-            if (inLoad.includes(name)) {
-              window._developer && (console.warn('⚠ 403 Ya se está procesando una solicitud para', name, ',no repita el paquete', npm))
-              return true
-            }
-
-            inLoad.push(name)
-
-            const inMod = modules[name]
-            if (inMod) {
-              window._developer && (console.warn('⚠ 500 El NPM', name, 'ya está instalado, use con', (inMod.for || 'REQUIRE') + '.METHOD'))
-              return true
-            }
-
-            try {
-              const module = await import(urlNpm);
-              const modulo = module.default || module;
-              modules[npm] = {
-                modulo: modulo,
-                for: result
-              }
-              result && (window[result] = modulo)
-              window._developer && (console.log(table([['📦 ' + npm, '✔ ' + (result || '')]])))
-              return true
-            } catch (error) {
-              window._developer && (console.error(table([['📦 ' + npm, '[404 Error]']])))
-              return false
-            }
-          }
-        } else {
-          console.warn(`No se admite asyload(${param})`)
-        }
-      })
-      const overlay = createNetworkOverlay()
-      const result = await Promise.all(promises);
-      const status = result.every((res)=>res)
-      overlay.remove()
-      if (!status) {
-        throw new Error('No se cargaron todas las librerías npm solicitadas')
-      }
-      return status;
-    }
-
-    return Object.freeze(asyload);
-  } catch (errorgeneral) {
-    alert(errorgeneral)
-  }
-})();
-const require = asyload.require      
-    </script>
-    <style>
-* {
-  box-sizing: border-box
-}
-
-html, body {
-  width: 100%;
-  height: 100%
-}
-
-body, aside>div {
-  background: #ffffff;
-  color: #24292f
-}
-
-@media (prefers-color-scheme: dark) {
-  body, aside>div {
-    background: #0d1117;
-    color: #c9d1d9
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  body {
-    background: #ffffff;
-    color: #24292f
-  }
-}
-
-body {
-  font-size: clamp(1px, 5vw, 1.25rem);
-  margin: 0;
-  font-family: asap,arial;
-  transition: background-color 0.3s, color 0.3s;
-  display: flex;
-  flex-direction: column;
-  overflow: auto
-}
-
-main {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  max-width: 1000px;
-  margin: auto;
-  overflow: auto
-}
-
-section.markdown-body {
-  display: inline-block;
-  padding: 1.6em;
-  overflow: auto;
-  flex: 1;
-  font-size: 1em
-}
-
-::-webkit-scrollbar, log *::-webkit-scrollbar {
-  width: 3px!important;
-  height: 3px!important
-}
-
-header {
-  display: flex;
-  gap: .3em;
-  padding: .5em;
-  box-shadow: 0 0 1px rgba(0,0,0,.5);
-  z-index: 1
-}
-
-header label{
-  width:100%
-}
-
-aside {
-  display: flex;
-  flex: .3
-}
-
-aside>div {
-  padding: 1em;
-  overflow: auto
-}
-
-aside>div strong{
-  font-size: 1.2em;
-  display: block;
-  padding: .2em 0
-}
-
-a.author {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  text-decoration: none;
-  text-align: center;
-  color: inherit;
-  font-weight: 900;
-  font-family: monospace
-}
-
-a.author strong {
-  font-size: 1.6em;
-  display: block;
-  margin: .05em 0
-}
-
-a.author p {
-  display: block;
-  margin: 5px
-}
-
-img.author {
-  width: 90%;
-  max-width: 200px;
-  aspect-ratio: 4/4;
-  border-radius: 100%;
-  margin: auto;
-  display: inline-block
-}
-
-.markdown-body table td {
-  border: none!important
-}
-
-.not-found {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  font-size: 1.2em;
-  text-align: center;
-  font-family: monospace
-}
-
-
-@media(max-width: 800px) {
-  aside {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: none
-  }
-
-  aside.show {
-    display: flex
-  }
-
-  aside>div {
-    width: 80%;
-    height: 100%;
-    max-width: 350px;
-    box-shadow: 0 0 3em #000;
-    z-index: 2;
-  }
-
-  section {
-    width: 100%;
-    height: 100%
-  }
-}      
-    </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown.min.css">
-    <link rel="stylesheet" href="min.css">
-  </head>
-  <body>
-    <header> <!-- https://github.com/rzashakeri/beautify-github-profile -->
-      <img psrc="https://img.shields.io/badge/Maintained%3F-yes-green.svg">
-      <button class="toggle">toggle</button>
-      <img src="https://visitor-badge.laobi.icu/badge?page_id={{owner}}.{{repo}}" alt="">
-      <label></label>
-      <img src="https://img.shields.io/github/stars/{{owner}}?label=Stars">
-    </header>
-    <main>
-      <aside class="nav-user">
-        <div>
-          <img src="https://img.shields.io/github/followers/{{owner}}?label=Seguidores&style=social">
-          <a class="author">
-            <img class="author" src="https://github.com/{{owner}}.png" data-src="https://imagecdn.app/v2/image/{{avatar}}.png">
-            <strong>@{{owner}}</strong>
-            <p>{{repo}}</p>
-          </a>
-          <div>
-            <img src="https://img.shields.io/github/license/{{owner}}/{{repo}}" alt="License">
-            <hr> 
-             <img style="max-width:100%" src="https://github-readme-stats.vercel.app/api?username={{owner}}&count_private=true&show_icons=true&hide=contribs" alt="rt">
-             <img style="max-width:100%" src="https://github-readme-stats.vercel.app/api/top-langs/?username={{owner}}&layout=compact" alt="rt">
-            <strong>Contributors</strong>
-            <img style="max-width:100%" src="https://contrib.rocks/image?repo={{owner}}/{{repo}}" alt="contribute">
-          </div>
-        </div>
-      </aside>
-      <section data-render="{{owners}}" class="markdown-body">
-      </section>
-    </main>
-    <footer>
-    </footer>
-  </body>
-  <script>
-    const [owner,repo] = document.querySelector('title').text.trim().split('/')
-
-    asyload.render(document.body, {
-      repo: repo,
-      owner: owner
-    })
-
-    asyload('marked marked', 'jquery $').then(async success=>{
-      const url =  `https://api.github.com/repos/${owner}/${repo}/readme`;
-      //const url = 'https://cdn.jsdelivr.net/npm/pride@latest/README.md'
-
-      $('.toggle,.nav-user').on('click', ()=>{
-        $('.nav-user').toggleClass('show')
-      })
-
-      $('.nav-user>div').on('click', function() {
-        event.preventDefault();
-        event.stopPropagation()
-      })
-
-      $.get(url).then(data=>{
-        $('.markdown-body').html( decodeURIComponent(escape( marked.parse( (atob(data.content)) ) ))  )
-        //$('.markdown-body').html(marked.parse(data))
-      }).catch(e=>{
-        $('.markdown-body').html(`<div class="not-found">
-          <div>
-            <h1>${e.status}</h1>
-            Error
-          </div>
-        </div>`)
-      })
-    }).catch(e=>{
-      console.error(e.message)
-    })
-  </script>
-</html>
+<a href="http://localhost:3000/">local</a>
