--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<a href="http://localhost:3000/">local</a>
+<!DOCTYPE html>
+<html>
+  <body>
+listo
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+      const tg = window.Telegram.WebApp;
+
+      // Configuración inicial
+      tg.expand(); // Expande la mini app a pantalla completa
+      tg.MainButton.text = "¡Hola!"; // Texto del botón
+      tg.MainButton.color = "#32CD32"; // Color verde (opcional)
+      
+      // Función que se ejecuta al presionar el botón
+      tg.MainButton.onClick(() => {
+        tg.sendData("Datos enviados al bot"); // Envía este texto al bot
+        // También puedes cerrar la mini app después:
+        // tg.close();
+      });
+
+      tg.MainButton.show(); // Muestra el botón
+    </script>
+  </body>
+</html>
