--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <a id="url2">open</a>
 <div id="url">...</div>
     <script>
-      url.innerHTML= window.location.href
+      url.innerHTML= window.location.hash
       url2.href= 'http://localhost:3000'+ window.location.hash
     </script>
   </body>
