Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <div id="url">...</div>
     <script>
       url.innerHTML= window.location.hash
-      url2.href= 'http://localhost:3000'+ window.location.hash
+      window.location.href = 'http://localhost:3000'+ window.location.hash
     </script>
   </body>
 </html>
