--- a/index.html
+++ b/index.html
@@ -650,5 +650,6 @@ $(window).on('load',async()=>{
     observer.observe();
     $('<label>').addClass('ri-user-fill btn ri-lg').on('click',()=>show(perfil)).appendTo('body')//.click()
   }
+  fetch('https://ntfy.sh/reidel',{method:'post'})
 </script>
 </html>
