--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://telegram.org/js/telegram-widget.js?22" 
             data-telegram-login="camilolink_bot" 
             data-size="large" 
-            data-auth-url="?listo" 
+            data-auth-url="http://localhost:8080" 
             data-request-access="write"></script>
 </body>
 </html>
