Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login Telegram</title>
 </head>
 <body>
+<img src="https://t.me/i/userpic/320/am5w3f9m43zyRp3ykZznMfU14iRk175O0eAtozEBohbfioa4qJdqypAlg8MxFSkI.jpg">
     <h1>Inicia sesión con Telegram</h1>
     <p>Haz clic en el botón de abajo:</p>
     <!-- El widget se insertará automáticamente aquí -->
