--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <title>Login Telegram</title>
 </head>
 <body>
-<img src="https://t.me/i/userpic/320/am5w3f9m43zyRp3ykZznMfU14iRk175O0eAtozEBohbfioa4qJdqypAlg8MxFSkI.jpg">
+
     <h1>Inicia sesión con Telegram</h1>
     <p>Haz clic en el botón de abajo:</p>
     <!-- El widget se insertará automáticamente aquí -->
-    <script src="https://telegram.org/js/telegram-widget.js?22" 
-            data-telegram-login="camilolink_bot" 
-            data-size="large" 
-            data-auth-url="http://localhost:8080" 
-            data-request-access="write"></script>
+  
+<script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="camilolink_bot" data-size="large" data-userpic="false" data-radius="5" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
+<script type="text/javascript">
+  function onTelegramAuth(user) {
+    alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
+  }
+</script>
+
+
+
 </body>
 </html>
