--- a/index.html
+++ b/index.html
@@ -7,18 +7,8 @@
 </head>
 <body>
 
-    <h1>Inicia sesión con Telegram</h1>
-    <p>Haz clic en el botón de abajo:</p>
-    <!-- El widget se insertará automáticamente aquí -->
-  
-<script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="camilolink_bot" data-size="large" data-userpic="false" data-radius="5" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
-<script type="text/javascript">
-  function onTelegramAuth(user) {
-    alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
-  }
-</script>
-
-
+    <h1>Inicia con Telegram</h1>
+    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="camilolink_bot" data-size="large" data-auth-url="http://localhost:8080/auth.html"></script>
 
 </body>
 </html>
