--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-    <h1>Inicia con Telegram</h1>
-    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="camilolink_bot" data-size="large" data-auth-url="http://localhost:8080/auth.html"></script>
+    <h1>Telegram to localhost</h1>
+    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="camilolink_bot" data-size="large" data-auth-url="http://localhost:8080/index.html"></script>
 
 </body>
 </html>
