--- a/index.html
+++ b/index.html
@@ -10,5 +10,23 @@
     <h1>Telegram to localhost</h1>
     <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="camilolink_bot" data-size="large" data-auth-url="http://localhost:8080/index.html"></script>
 
+<script>
+    alt = window.alert; alert = (t)=> alt(JSON.stringify(t,null,2))
+    
+    function getUrlParams(url = null) {
+      const targetUrl = url || (typeof window !== 'undefined' ? window.location.href : '');
+      if (!targetUrl) return {};
+      try {
+        const searchParams = new URL(targetUrl).searchParams;
+        return Object.fromEntries(searchParams.entries());
+      } catch (error) {
+        console.error('Error al parsear la URL:', error);
+        return {};
+      }
+    }
+    
+    alert(getUrlParams())
+
+</script>
 </body>
 </html>
