Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>Telegram to localhost</h1>
-    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="camilolink_bot" data-size="large" data-auth-url="http://localhost:8080/index.html"></script>
+    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="camilolink_bot" data-size="large" data-auth-url="https://reidelrb.github"></script>
 
 <script>
     alt = window.alert; alert = (t)=> alt(JSON.stringify(t,null,2))
