--- a/index.html
+++ b/index.html
@@ -2,20 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>301</title>
-  <script>
-(function(urlDestino) {
-    const query = window.location.search;
-    const hash = window.location.hash;
-    let url = urlDestino;
-    
-    if (query) url += url.includes('?') ? '&' + query.slice(1) : query;
-    if (hash) url += hash;
-    
-    window.location.href = url;
-})('http://localhost:8080/index.html')
-  </script>
+  <title>root</title>
 </head>
 <body>
+  <p>url: <a id="show"></a></p>
+  <script>
+    show.innerText = show.href = 'http://localhost:8080/#' + location.hash
+  </script>
 </body>
 </html>
