Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <p>url: <a id="show"></a></p>
   <script>
-    show.innerText = show.href = 'http://localhost:8080/#' + location.hash
+    show.innerText = show.href = 'http://localhost:8080/' + location.hash
   </script>
 </body>
 </html>
